# venera

./: .gitignore  pyproject.toml  readme.md
.github/workflows/: publish.yml
src/pipefy/: README.md  __init__.py  context.py  error.py  node.py  pipeline.py  test_pipeline.py
src/pipefy/engine/: __init__.py  decision_engine.py  middleware_engine.py  node_registry.py  node_runner.py  step_runner.py
src/pipefy/middleware/: __init__.py  error_report.py  logger.py  middleware.py  report_trace.py  validation.py
src/pipefy/report/: __init__.py  html.py  report.py
src/pipefy/sdk/: __init__.py  logger.py
src/pipefy/sdk/html/: page.py  tag.py  ui.py  ui_base.py
src/pipefy/sdk/html/themes/: default.py
src/tchau/: __init__.py
src/tchau/core/: context.py  error.py  executable.py  middleware.py  node.py  pipeline.py  result.py  scope.py  source.py
src/tchau/engine/: __init__.py  decision_engine.py  executable_runner.py  execution_frame.py  middleware_engine.py  node_runner.py  scope_runner.py  step_runner.py
src/tchau/middleware/: __init__.py  error_report.py  logger.py  report_trace.py  validation.py
src/tchau/report/: model.py
src/tchau/sdk/: logger.py
src/venera/: __init__.py  context.py  pipeline.py  report.py  test_pipeline.py
src/venera/engine/: __init__.py  decision_engine.py  node_registry.py
src/venera/middleware/: error_report.py  middleware.py
src/venera/sdk/: __init__.py  reference.py  save.py
src/venera/sdk/html/: theme.py  ui_base.py
