[project]
name = "pipefy"
version = "0.1.0"
description = "A lightweight pipeline framework with validation, middleware, logging and reports."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "polars",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]