[project]
name = "pipefy"
version = "0.1.5"
description = "A lightweight pipeline framework with validation, middleware, logging and reports."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "polars",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pipefy = ["py.typed"]