[project]
name = "pipefy"
dynamic = ["version"]
description = "A lightweight pipeline framework with validation, middleware, logging and reports."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "polars",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pipefy = ["py.typed"]